--- a/Registro de Modelos LLM.ipynb
+++ b/Registro de Modelos LLM.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "source": [
     "# 🧑‍💻 Introducción a MLFLow (Parte II): Tracking de Modelos de Lenguaje (LLMs).\n",
-    "Integrantes: Tobías Romero **(2021214011)** y Jenifer Roa **(20222140xx)**\n",
+    "Integrantes: Tobías Romero **(2021214011)** y Jenifer Roa **(2022214006)**\n",
     "---"
    ],
    "id": "7d0514a5d30801fc"
