Registro de Modelos de ML.ipynb

--- a/Registro de Modelos de ML.ipynb
+++ b/Registro de Modelos de ML.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "source": [
     "# 🧑‍💻 Introducción a MLFLow (Parte I): Entrenamiento y Registro de Modelos de Regresión Logística.\n",
-    "Integrantes: Tobías Romero **(2021214011)** y Jenifer Roa **(20222140xx)**\n",
+    "Integrantes: Tobías Romero **(2021214011)** y Jenifer Roa **(2022214006)**\n",
     "---"
    ],
    "id": "8a77807f92f26ee"
